# osd-software

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac  install-build-deps.sh  osd.pc.in  shippable.yml
doc/: Makefile.in  conf.py  development.rst  doxygen.cfg.in  index.rst  requirements.txt
doc/02_developer/: unittests.rst
doc/02_developer/api/libosd/: hostmod.rst
doc/api/: index.rst
doc/api/libosd/: com.rst
src/: Makefile.am
src/com/: Makefile.am  osd-com.c
src/com/include/: osd-com.h
src/common/: Makefile.am
src/common/include/: osd.h
src/libosd/: Makefile.am  com-private.h  com.c  hostctrl.c  hostmod-private.h  hostmod.c  hostmod_stmlogger.c  inprochelper.c  inprochelper.h  log.c  module.c  osd-com-private.h  osd-private.h  packet.c  packet.h  util.c  worker.c  worker.h
src/libosd/include/: osd-client.h  osd-com.h  osd.h
src/libosd/include/osd/: com.h  hostctrl.h  hostmod.h  hostmod_stmlogger.h  memory.h  module.h  osd.h  packet.h  reg.h  stm.h
src/python/: .gitignore  README.md  setup.py
src/python/src/: cosd.pxd  cutil.pxd  osd.pyx
src/tools/: Makefile.am  cli-util.h
src/tools/osd-daemon/: Makefile.am  osd-daemon.c
src/tools/osd-device-gateway/: osd-device-gateway.c
src/tools/osd-host-controller/: Makefile.am  osd-host-controller.c
src/tools/osd-systrace-log/: Makefile.am  osd-systrace-log.c
tests/unit/: Makefile.am  check_com.c  check_hostmod.c  check_hostmod_stmlogger.c  check_log.c  check_packet.c  check_util.c  mock_host_controller.c  mock_host_controller.h  testutil.h
tests/unit/com/: check_com.c
